# mmif-docloc-baapb

./: .for-gha-do-not-delete  LICENSE  README.md  setup.cfg
.github/workflows/: daily-release.yml  main.yml  publish.yml  scheduled-release.yml
mmif_docloc_baapb/: __init__.py
tests/: test_baapb_handler.py  test_mmif_integration.py
