[metadata]
name = mmif_docloc_baapb_test
version = 0.0.1
description = a plugin to mmif-python to handle `baapb` location scheme 
license = Apache
long_description = file: README.md
author = Brandeis Lab for Linguistics and Computation
author_email = admin@clams.ai

[options]
packages = find:
install_requires = requests
